--- a/LearningSpring/SpringInAction/taco-cloud/src/main/resources/application.yaml
+++ b/LearningSpring/SpringInAction/taco-cloud/src/main/resources/application.yaml
@@ -1,2 +1,4 @@
-spring.datasource.generate-unique-name=false
-spring.datasource.name=tacocloud
+spring:
+  datasource:
+    generate-unique-name: false
+    name: tacocloud
