--- a/tools/rabbitmq/DotnetRabbitMqPractice/Basics/Consumer/Consumer.csproj
+++ b/tools/rabbitmq/DotnetRabbitMqPractice/Basics/Consumer/Consumer.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\QueueBuilder\QueueBuilder.csproj" />
+      <ProjectReference Include="..\..\QueueBuilder\QueueBuilder.csproj" />
     </ItemGroup>
 
 </Project>
