--- a/tools/rabbitmq/DotnetRabbitMqPractice/PubSub/Publisher/Publisher.csproj
+++ b/tools/rabbitmq/DotnetRabbitMqPractice/PubSub/Publisher/Publisher.csproj
@@ -8,7 +8,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\QueueBuilder\QueueBuilder.csproj" />
+      <ProjectReference Include="..\..\Misc\QueueBuilder\QueueBuilder.csproj" />
     </ItemGroup>
-
 </Project>
