--- a/tools/rabbitmq/DotnetRabbitMqPractice/MassTransit/InMemory/InMemory.csproj
+++ b/tools/rabbitmq/DotnetRabbitMqPractice/MassTransit/InMemory/InMemory.csproj
@@ -9,8 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="MassTransit" Version="8.3.4" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+      <PackageReference Include="Microsoft.Extensions.Hosting"/>
     </ItemGroup>
 
 </Project>
