added kernel and identity modules

--- a/backend/dotnet/MultiTenant/MultiTenant.API/MultiTenant.API.csproj
+++ b/backend/dotnet/MultiTenant/MultiTenant.API/MultiTenant.API.csproj
@@ -9,5 +9,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5"/>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Identity\Identity.Api\Identity.Api.csproj" />
+      <ProjectReference Include="..\Kernel\Kernel.Api\Kernel.Api.csproj" />
+    </ItemGroup>
 
 </Project>
