--- a/backend/dotnet/MultiTenant/MultiTenant.API/appsettings.Development.json
+++ b/backend/dotnet/MultiTenant/MultiTenant.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SharedConnection": "Server=localhost\\SQLSERVER;Database=SharedTenantDb;TrustServerCertificate=True;Encrypt=False;",
+    "DefaultConnection": "Server=localhost\\SQLSERVER;Database=MultiTenantDb;TrustServerCertificate=True;Encrypt=False;"
   }
 }
