added init version for alerts assignment engine POC

--- a/backend/dotnet/MultiTenant/Kernel/Kernel.Infrastructure/Kernel.Infrastructure.csproj
+++ b/backend/dotnet/MultiTenant/Kernel/Kernel.Infrastructure/Kernel.Infrastructure.csproj
@@ -20,5 +20,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Kernel.Application\Kernel.Application.csproj" />
+      <ProjectReference Include="..\Kernel.Domain\Kernel.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Persistence\Migrations\" />
     </ItemGroup>
 </Project>
