--- a/backend/dotnet/MultiTenant/MultiTenant.API/appsettings.Development.json
+++ b/backend/dotnet/MultiTenant/MultiTenant.API/appsettings.Development.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "SharedConnection": "Server=localhost\\SQLSERVER;Database=SharedTenantDb;TrustServerCertificate=True;Encrypt=False;",
     "DefaultConnection": "Server=localhost\\SQLSERVER;Database=MultiTenantDb;TrustServerCertificate=True;Encrypt=False;"
-  }
+  },
+  "Migrate": true
 }
